--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,8 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-dom": "^18.0.6",
-    "body-parser": "^1.20.0",
-    "body-parser-zlib": "^1.0.2",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "hbs": "^4.2.0",
-    "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -36,9 +31,6 @@
       "react-app",
       "react-app/jest"
     ]
-  },
-  "browsers": {
-    "zlib": false
   },
   "browserslist": {
     "production": [
