alespon vsechno pracuje a neni rozbito

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ DATABASE = mydb
 DATABASE_HOST = localhost
 DATABASE_USER = myapp
 DATABASE_PASSWORD = myapp1234
-
+ACCESS_TOKEN_SECRET = helloword
+REFRESH_TOKEN_SECRET = helloword
