--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.0.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
