--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
+  },
+  "devDependencies": {
+    "express-validator": "^6.14.2"
   }
 }
