added be pristup do stranek jenom pro prihlasene uzivatele, nebo podle role - na postman vsechno je funkcni ... ale jeste neni normalni propojeni na fe

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ DATABASE = mydb
 DATABASE_HOST = localhost
 DATABASE_USER = myapp
 DATABASE_PASSWORD = myapp1234
-
+JWT_ACCESS_SECRET = i-like-czech-language
+JWT_REFRESH_SECRET = i-like-czech-language-refresh
